--- a/css/style.css
+++ b/css/style.css
@@ -318,3 +318,147 @@
     margin: 20px;
 }
 
+/*-------- CALDAS --------*/
+
+.TituloCaldas{
+    text-align: center;
+    color: rgb(253, 253, 240);
+    padding-left: 20%;
+    padding-right: 20%;
+    /*
+    padding: 15px;
+    */
+    background-color: #9CB057; 
+    max-width: 50%;
+    border: 2px rgb(48, 114, 177);
+    border-radius: 10px;
+    margin: 20px;
+}
+.InfoCaldas {
+    text-align: center;
+    color: rgb(253, 253, 240);
+    padding-left: 20%;
+    padding-right: 20%;
+    padding-top: 4%;
+    padding-bottom: 4%;
+    font-size: 25px;
+    /*
+    padding: 15px;
+    */
+    background-color: #9CB057; 
+    max-width: 50%;
+    border: 2px rgb(48, 114, 177);
+    border-radius: 10px;
+    margin: 20px;
+}
+.ImagenCaldas {
+    text-align: right;
+}
+
+.Caracteristica4 {
+    display: grid;
+    place-items: center;
+    
+    text-align: center;
+    color: rgb(253, 253, 240);
+    padding-left: 20%;
+    padding-right: 20%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    font-size: 25px;
+    /*
+    padding: 15px;
+    */
+    background-color: #9CB057; 
+    max-width: 50%;
+    border: 2px rgb(48, 114, 177);
+    border-radius: 10px;
+    margin: 20px;
+}
+
+.EconomiaCaldas {
+    text-align: center;
+    color: rgb(253, 253, 240);
+    padding-left: 20%;
+    padding-right: 20%;
+    /*
+    padding: 15px;
+    */
+    background-color: #9CB057; 
+    max-width: 50%;
+    border: 2px rgb(48, 114, 177);
+    border-radius: 10px;
+    margin: 20px;
+}
+/*-------- SANTANDER --------*/
+
+.TituloSantander{
+    text-align: center;
+    color: rgb(253, 253, 240);
+    padding-left: 20%;
+    padding-right: 20%;
+    /*
+    padding: 15px;
+    */
+    background-color: #9CB057; 
+    max-width: 50%;
+    border: 2px rgb(48, 114, 177);
+    border-radius: 10px;
+    margin: 20px;
+}
+.InfoSantander {
+    text-align: center;
+    color: rgb(253, 253, 240);
+    padding-left: 20%;
+    padding-right: 20%;
+    padding-top: 4%;
+    padding-bottom: 4%;
+    font-size: 25px;
+    /*
+    padding: 15px;
+    */
+    background-color: #9CB057; 
+    max-width: 50%;
+    border: 2px rgb(48, 114, 177);
+    border-radius: 10px;
+    margin: 20px;
+}
+.ImagenSantander {
+    text-align: right;
+}
+
+.Caracteristica5 {
+    display: grid;
+    place-items: center;
+    
+    text-align: center;
+    color: rgb(253, 253, 240);
+    padding-left: 20%;
+    padding-right: 20%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    font-size: 25px;
+    /*
+    padding: 15px;
+    */
+    background-color: #9CB057; 
+    max-width: 50%;
+    border: 2px rgb(48, 114, 177);
+    border-radius: 10px;
+    margin: 20px;
+}
+
+.EconomiaSantander {
+    text-align: center;
+    color: rgb(253, 253, 240);
+    padding-left: 20%;
+    padding-right: 20%;
+    /*
+    padding: 15px;
+    */
+    background-color: #9CB057; 
+    max-width: 50%;
+    border: 2px rgb(48, 114, 177);
+    border-radius: 10px;
+    margin: 20px;
+}
